Allow to select investments for investment reports

The selection of investments as sub-accounts of investment accounts was
only possible if the expert mode was selected. This change will provide
access to the selection in report configuration for all investment
reports.

BUG: 416902
FIXED-IN: 5.0.9